sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:21: error: not found: value avant
        avant -= 1
        ^