sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  val n = getTaille()
  var apresBleu = 0
  var blancRouge = n-1
  var avantBlanc = n-1
  while (!estTrie() && apresBleu < avantBlanc) {
    while (getCouleur(apresBleu) != BLEU && getCouleur(blancRouge) != ROUGE) {
      if (getCouleur(avantBlanc) == BLEU) {
        echange(apresBleu,avantBlanc)
        apresBleu += 1
        avantBlanc -= 1
      }
      if (getCouleur(avantBlanc) == ROUGE) {
        echange(avantBlanc,blancRouge)
        avantBlanc -= 1
        blancRouge -= 1
      }
      if (getCouleur(avantBlanc) == BLANC) {
        echange(avantBlanc,apresBleu)
        avant -= 1
      }
    }
  }
}

